0022613: Retrieve environment variable in EDL